# wasi-callback

./: Cargo.toml  Makefile  bindings.rs  event-handler.wit  exec.wit  readme.md
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/exec_host/: Cargo.toml
crates/exec_host/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
src/: bindings.rs  host.rs  main.rs
