[package]
name = "wasi-callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = { version = "0.4", default-features = false }
tokio = { version = "1.4.0", features = ["full"] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
wasi-common = "0.35"
wasi-cap-std-sync = "0.35"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
events = { path = "./crates/events" }

[workspace]
members = ["demo", "crates/events"]
